<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:text="@string/Ingredients"
    android:textStyle="bold"
    android:id="@+id/tv_step_to_ingredient"
    android:background="@color/incredicolor"
    android:layout_gravity="center"
    android:gravity="center"
    android:textSize="@dimen/cardSize"/>


    <FrameLayout
        android:id="@+id/step_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>