<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/Detailed_Descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/lefty"
            android:id="@+id/leftarrow"
            android:layout_marginRight="100dp"/>

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/rightarrow"
            android:background="@drawable/righty"/>

    </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
